syntax = "proto3";
package example.dex;

import "example/dex/pool.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "example/x/dex/types";

// Msg defines the Msg service.
service Msg {
    rpc CreatePool(MsgCreatePool) returns (MsgCreatePoolResponse);
  rpc UpdatePool(MsgUpdatePool) returns (MsgUpdatePoolResponse);
  rpc DeletePool(MsgDeletePool) returns (MsgDeletePoolResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgCreatePool {
  string creator = 1;
  string denom = 2;
  string desc = 3;
  bool active = 4;
  int32 height = 5;
}

message MsgCreatePoolResponse {
  uint64 id = 1;
}

message MsgUpdatePool {
  string creator = 1;
  uint64 id = 2;
  string denom = 3;
  string desc = 4;
  bool active = 5;
  int32 height = 6;
}

message MsgUpdatePoolResponse {}

message MsgDeletePool {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeletePoolResponse {}

// this line is used by starport scaffolding # proto/tx/message
